syntax = "proto3";

option csharp_namespace = "GameDevsConnect.Backend.API.Post.Services";

package post;

service PostProtoService
{
	rpc GetIds(GetPostIdsRequest) returns (GetIdsResponse);
	rpc GetById(IdRequest) returns (GetPostResponse);
	rpc GetFull(IdRequest) returns (GetFullResponse);
	rpc GetByUserId(IdRequest) returns (GetIdsResponse);
	rpc GetCommentIds(IdRequest) returns (GetIdsResponse);
	rpc Add(UpsertPostRequest) returns (AddResponse);
	rpc Update(UpsertPostRequest) returns (Response);
	rpc Delete(IdRequest) returns (Response);
}

message Post
{
	string id = 1;
	string parentId = 2;
	bool hasQuest = 3;
	string message = 4;
	string created = 5;
	string projectId = 6;
	string ownerId = 7;
	bool isDeleted = 8;
	bool completed = 9;
}

message File
{
	string id = 1;
	string url = 2;
	string type = 3;
	string extension = 4;
	int32 size = 5;
	string created = 6;
	string ownerId = 7;
}

message User
{
	string id = 1;
	string loginId = 2;
	string username = 3;
	string avatar = 4;
	string accountType = 5;
}

message Tag
{
	string tag = 1;
	string type = 2;
}


// Requests

message GetPostIdsRequest
{
	int32 page = 1;
	int32 pageSize = 2;
	string searchTerm = 3;
	string parentId = 4;
}

message IdRequest
{
	string id = 1;
}

message UpsertPostRequest
{
	Post post = 1;
	repeated Tag tags = 2;
	repeated string fileIds = 3;
}


// Responses

message Response
{
	string message = 1;
	bool status = 2;
	repeated string errors = 3;
}

message GetIdsResponse
{
	Response response = 1;
	repeated string ids = 2;
}

message GetPostResponse
{
	Response response = 1;
	Post post = 2;
}

message GetFullResponse
{
	Response response = 1;
	Post post = 2;
	repeated File files = 3;
	int32 questCount = 4;
	repeated Tag tags = 5;
	string projectTitle = 6;
	User owner = 7;
	int32 comments = 8;
	int32 likes = 9;

}

message AddResponse
{
	Response respone = 1;
	string id = 2;
}