syntax = "proto3";

option csharp_namespace = "GameDevsConnect.Backend.API.Quest.Services";

import "google/protobuf/empty.proto";

package quest;

service QuestProtoService
{
	rpc AddQuest(AddQuestRequest) returns (Response);
	rpc GetQuest(GetQuestRequest) returns (GetQuestResponse);
	rpc UpdateQuest(UpdateQuestRequest) returns (Response);
	rpc DeleteQuest(DeleteQuestRequest) returns (Response);
	rpc CompleteQuest(CompleteQuestRequest) returns (Response);
	rpc GetIds(GetIdsRequest) returns (GetIdsResponse);
	rpc GetByPostId(GetByPostIdRequest) returns (GetIdsResponse);
}

message Quest
{
	string id = 1;
	string postId = 2;
	string ownerId = 3;
	int32 difficulty = 4;
	string title = 5;
	string description = 6;
}

message Response 
{
	string message = 1;
	bool status = 2;
	repeated string errors = 3;
}

// Request
message AddQuestRequest
{
	Quest quest = 1;
}

message GetQuestRequest
{
	string id = 1;
	string userId = 2;
}

message UpdateQuestRequest
{
	Quest quest = 1;
}

message DeleteQuestRequest
{
	string id = 1;
}

message CompleteQuestRequest
{
	string questId = 1;
	string fileId = 2;
	string ownerId = 3;
	string message = 4;
}

message GetIdsRequest
{
	int32 page = 1;
	int32 pageSize = 2;
	string searchTerm = 3;
	string userId = 4;
}

message GetByPostIdRequest
{
	string id = 1;
}

message FavoriteQuestRequest
{
	string questId = 1;
	string userId = 2;
}


// Response
message GetQuestResponse
{
	Response response = 1;
	Quest quest = 2;
}

message GetIdsResponse
{
	Response response = 1;
	repeated string ids = 2;
}